--- a/Elevate.css
+++ b/Elevate.css
@@ -19,28 +19,23 @@ h2 {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
 }
-
 .navbar .logo {
   font-size: 24px;
   font-weight: bold;
   color: #ff7e5f;
 }
-
 .navbar .nav-links {
   list-style: none;
   padding: 0;
 }
-
 .navbar .nav-links li {
   display: inline-block;
   margin: 0 10px;
 }
-
 .navbar .nav-links a {
   text-decoration: none;
   font-weight: bold;
 }
-
 .navbar .nav-links a:hover {
   color: #ff7e5f;
 }
@@ -58,7 +53,6 @@ h2 {
   border-radius: 8px;
   background: linear-gradient(45deg, #ff7e5f, #feb47b);
 }
-
 .primary-btn:hover {
   box-shadow: 0px 5px 15px rgba(255, 126, 95, 0.4);
 }
@@ -70,21 +64,17 @@ h2 {
   justify-content: space-between;
   padding: 100px 10px;
 }
-
 .main .content {
   width: 50%;
 }
-
 .main h1 {
   font-size: 48px;
   color: #ff7e5f;
 }
-
-.main p {
+.main .p {
   font-size: 18px;
 }
-
-.main img {
+.main .img {
   width: 40%;
 }
 
