--- a/Elevate.scss
+++ b/Elevate.scss
@@ -5,8 +5,14 @@ $color-accent-light:#feb47b;
 $color-bg-light:#f3f3f3;
 $color-bg-dark:#222;
 $shadow-default: 0 2px 10px rgba(0,0,0,0.1);
+
 $padding-large: 100px 10px;
 $padding-medium: 50px 10px;
+
+$breakpoint-extra-small: 576px;
+$breakpoint-small: 768px;
+$breakpoint-medium: 992px;
+$breakpoint-large: 1200px;
 
 /* General Styles */
 body {
@@ -133,13 +139,31 @@ h2 {
 }
 
 /* Responsive */
-@media screen and (max-width: 992px) {
-    .card-list {
-        flex-direction: column;
-        align-items: center;
-        gap: 50px;
-    }
-    .card {
-        width: 80%;
-    }
+@mixin respond($breakpoint) {
+  @media screen and (max-width: $breakpoint) {
+    @content;
+  }
+}
+
+.card-list {
+  display: flex;
+  justify-content: space-between;
+
+  @include respond($breakpoint-medium) {
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+}
+
+.card {
+  background: white;
+  padding: 20px;
+  width: 27%;
+  border-radius: 10px;
+  box-shadow: $shadow-default;
+
+  @include respond($breakpoint-medium) {
+    width: 80%;
+  }
 }
