--- a/Elevate.scss
+++ b/Elevate.scss
@@ -41,29 +41,24 @@ h2 {
     }
 
     .nav-links {
-    
         list-style: none;
         padding: 0;
 
-    li {
+        li {
+            display: inline-block;
+            margin: 0 10px;
+        }
 
-        display: inline-block;
-        margin: 0 10px;
-    }
+        a {
+            text-decoration: none;
+            font-weight: bold;
 
-    a {
-
-        text-decoration: none;
-        font-weight: bold;
-
-        &:hover {
-            color: $color-accent;
+            &:hover {
+                color: $color-accent;
+            }
         }
     }
 }
-}
-
-
 
 /* Primary Button */
 .primary-btn {
@@ -93,20 +88,20 @@ h2 {
     padding: $padding-large;
 
     .content {
-    width: 50%;
+        width: 50%;
     }
 
     h1 {
-    font-size: 48px;
-    color: #ff7e5f;
+        font-size: 48px;
+        color: #ff7e5f;
     }
     
     .p {
-    font-size: 18px;
+        font-size: 18px;
     }
 
     .img {
-    width: 40%;
+        width: 40%;
     }
 }
 
@@ -145,6 +140,7 @@ h2 {
   }
 }
 
+/* Medium breakpoint (≤992px) */
 .card-list {
   display: flex;
   justify-content: space-between;
@@ -165,5 +161,57 @@ h2 {
 
   @include respond($breakpoint-medium) {
     width: 80%;
+  }
+}
+
+/* Extra small breakpoint (≤576px) */
+@include respond($breakpoint-extra-small) {
+  /* Navbar */
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    .nav-links {
+      margin-top: 10px;
+
+      li {
+        display: block;     
+        margin: 8px 0;
+      }
+    }
+  }
+
+  /* Main section */
+  .main {
+    flex-direction: column;  
+    text-align: center;      
+    align-items: center;     
+
+    .content {
+      width: 100%;            
+      margin-bottom: 20px;    
+    }
+
+    h1 {
+      font-size: 32px;        
+    }
+
+    img {
+      width: 80%;
+      margin: 0 auto;         
+      display: block;
+    }
+  }
+
+  /* Cards */
+  .card-list {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .card {
+    width: 100%;
   }
 }
